<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="64dp"
              android:orientation="horizontal"
              tools:context="com.example.weather.weatherforecast.activities.MainActivity">

    <ImageView
        android:id="@+id/weather_img"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginLeft="@dimen/margin_medium"
        android:layout_marginRight="@dimen/margin_medium"
        tools:src="@mipmap/ic_clear"
        />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="2"
        android:gravity="center_vertical"
        android:orientation="vertical">

        <TextView
            android:id="@+id/day_of_week_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/text_medium"
            android:textStyle="bold"
            tools:text="@string/mock_day_of_week"/>


        <TextView
            android:id="@+id/condition_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="@string/mock_condition"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/temp_current_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/margin_large"
            android:textSize="@dimen/text_medium"
            android:textStyle="bold"
            tools:text="@string/mock_temp_current"/>

        <TextView
            android:id="@+id/temp_min_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/margin_large"
            tools:text="@string/mock_temp_min"/>

    </LinearLayout>

</LinearLayout>