<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:fillViewport="true"
    tools:context="com.example.weather.weatherforecast.activities.MainActivity">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <FrameLayout
            android:id="@+id/frame_today"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="@color/colorMainActivity"
            app:layout_constraintBottom_toBottomOf="@+id/condition_tv"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            >
        </FrameLayout>

        <TextView
            android:id="@+id/date_tv"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin_extra_large"
            android:paddingBottom="@dimen/padding_small"
            android:paddingTop="@dimen/padding_large"
            android:textColor="@android:color/white"
            android:textSize="@dimen/text_medium"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="@string/mock_full_date"

            />

        <TextView
            android:id="@+id/temp_current_tv"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textColor="@android:color/white"
            android:textSize="@dimen/text_extra_large"
            app:layout_constraintLeft_toLeftOf="@id/date_tv"
            app:layout_constraintTop_toBottomOf="@+id/date_tv"
            tools:text="@string/mock_temp_current"
            />

        <TextView
            android:id="@+id/temp_min_tv"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/padding_medium"
            android:textColor="@android:color/white"
            android:textSize="@dimen/text_large"
            app:layout_constraintLeft_toLeftOf="@id/temp_current_tv"
            app:layout_constraintTop_toBottomOf="@+id/temp_current_tv"
            tools:text="@string/mock_temp_min"
            />

        <ImageView
            android:id="@+id/weather_img"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/margin_large"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:src="@mipmap/art_clear"
            />

        <TextView
            android:id="@+id/condition_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_small"
            android:paddingBottom="@dimen/padding_medium"
            android:textColor="@android:color/white"
            android:textSize="@dimen/text_medium"
            app:layout_constraintLeft_toLeftOf="@+id/weather_img"
            app:layout_constraintRight_toRightOf="@+id/weather_img"
            app:layout_constraintTop_toBottomOf="@id/weather_img"
            tools:text="@string/mock_condition"/>

        <android.support.v7.widget.RecyclerView
            android:id="@+id/weather_daily_rv"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/frame_today"
            >

        </android.support.v7.widget.RecyclerView>
    </android.support.constraint.ConstraintLayout>
</android.support.v4.widget.NestedScrollView>
